[metadata]
name = noise-cipher-CodeWritten
version = 0.0.2
url = https://github.com/DaRealCodeWritten/Noise-Cipher
author = CodeWritten
author_email = null
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A new cipher module
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
